magicsticklibs/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AREMAINDER
    COMMENT
    COMMENT_MULTI
    QUOTE_1
    QUOTE_2

Grammar

Rule 0     S' -> Decls
Rule 1     Decls -> Decl Decls
Rule 2     Decls -> empty
Rule 3     Decl -> Func_Decl
Rule 4     Decl -> Func_Proto
Rule 5     Decl -> Struct_Decl
Rule 6     Decl -> Union_Decl
Rule 7     Decl -> Enum_Decl
Rule 8     Decl -> Var_Decl
Rule 9     Decl -> Typedef_Decl
Rule 10    Func_Proto -> Func_ID L_PAR Types R_PAR SEMICOLON
Rule 11    Func_Proto -> Func_ID L_PAR Params R_PAR SEMICOLON
Rule 12    Func_Proto -> Func_ID L_PAR R_PAR SEMICOLON
Rule 13    Func_Decl -> Func_ID L_PAR Params R_PAR Block
Rule 14    Func_Decl -> Func_ID L_PAR Id_List R_PAR Struct_Def Block
Rule 15    Func_Decl -> Func_ID L_PAR R_PAR Block
Rule 16    Params -> Param COMMA Params
Rule 17    Params -> Param
Rule 18    Param -> CONST Type NAME
Rule 19    Param -> Type NAME
Rule 20    Types -> Type COMMA Types
Rule 21    Types -> Type
Rule 22    Id_List -> NAME COMMA Id_List
Rule 23    Id_List -> NAME
Rule 24    Func_ID -> Type NAME
Rule 25    Func_ID -> NAME
Rule 26    Typedef_Decl -> TYPEDEF Type NAME SEMICOLON
Rule 27    Struct_Decl -> STRUCT NAME L_CURLY Struct_Def R_CURLY SEMICOLON
Rule 28    Union_Decl -> UNION NAME L_CURLY Struct_Def R_CURLY SEMICOLON
Rule 29    Struct_Def -> Var_Decl Struct_Def
Rule 30    Struct_Def -> Var_Decl
Rule 31    Var_Decl -> Mod Type Var Var_List SEMICOLON
Rule 32    Var_Decl -> Type Var Var_List SEMICOLON
Rule 33    Var_Decl -> Mod Var Var_List SEMICOLON
Rule 34    Var -> NAME Array
Rule 35    Var -> NAME Array ASSIGN Op_If
Rule 36    Array -> L_BRACKET Expr R_BRACKET
Rule 37    Array -> L_BRACKET R_BRACKET
Rule 38    Array -> empty
Rule 39    Var_List -> COMMA Var_Item Var_List
Rule 40    Var_List -> empty
Rule 41    Var_Item -> Pointers Var
Rule 42    Mod -> EXTERN
Rule 43    Mod -> STATIC
Rule 44    Mod -> REGISTER
Rule 45    Mod -> AUTO
Rule 46    Mod -> VOLATILE
Rule 47    Mod -> CONST
Rule 48    Enum_Decl -> ENUM NAME L_CURLY Enum_Def R_CURLY SEMICOLON
Rule 49    Enum_Def -> Enum_Val COMMA Enum_Def
Rule 50    Enum_Def -> Enum_Val
Rule 51    Enum_Val -> NAME
Rule 52    Enum_Val -> NAME ASSIGN INTEGER
Rule 53    Type -> Base Pointers
Rule 54    Base -> Sign Scalar
Rule 55    Base -> STRUCT NAME
Rule 56    Base -> STRUCT L_CURLY Struct_Def R_CURLY
Rule 57    Base -> UNION NAME
Rule 58    Base -> UNION L_CURLY Struct_Def R_CURLY
Rule 59    Base -> ENUM NAME
Rule 60    Sign -> SIGNED
Rule 61    Sign -> UNSIGNED
Rule 62    Sign -> empty
Rule 63    Scalar -> CHAR
Rule 64    Scalar -> INT
Rule 65    Scalar -> FLOAT
Rule 66    Scalar -> DOUBLE
Rule 67    Scalar -> VOID
Rule 68    Pointers -> MULTIPLY Pointers
Rule 69    Pointers -> empty
Rule 70    Stm -> PRINTF L_PAR STRING Printf_Params R_PAR SEMICOLON
Rule 71    Printf_Params -> COMMA Printf_Param Printf_Params
Rule 72    Printf_Params -> Printf_Param
Rule 73    Printf_Params -> empty
Rule 74    Printf_Param -> Value
Rule 75    Stm -> SCANF L_PAR STRING COMMA Scanf_Param R_PAR SEMICOLON
Rule 76    Scanf_Param -> AND_B NAME
Rule 77    Scanf_Param -> NAME
Rule 78    Stm -> Var_Decl
Rule 79    Stm -> NAME COLON
Rule 80    Stm -> IF L_PAR Expr R_PAR Then_Stm ELSE Stm
Rule 81    Stm -> IF L_PAR Expr R_PAR Stm
Rule 82    Stm -> WHILE L_PAR Expr R_PAR Stm
Rule 83    Stm -> FOR L_PAR Arg SEMICOLON Arg SEMICOLON Arg R_PAR Stm
Rule 84    Stm -> Normal_Stm
Rule 85    Then_Stm -> IF L_PAR Expr R_PAR Then_Stm ELSE Then_Stm
Rule 86    Then_Stm -> WHILE L_PAR Expr R_PAR Then_Stm
Rule 87    Then_Stm -> FOR L_PAR Arg SEMICOLON Arg SEMICOLON Arg R_PAR Then_Stm
Rule 88    Then_Stm -> Normal_Stm
Rule 89    Normal_Stm -> DO Stm WHILE L_PAR Expr R_PAR
Rule 90    Normal_Stm -> SWITCH L_PAR Expr R_PAR L_CURLY Case_Stms R_CURLY
Rule 91    Normal_Stm -> Block
Rule 92    Normal_Stm -> Expr SEMICOLON
Rule 93    Normal_Stm -> GOTO NAME SEMICOLON
Rule 94    Normal_Stm -> BREAK SEMICOLON
Rule 95    Normal_Stm -> CONTINUE SEMICOLON
Rule 96    Normal_Stm -> RETURN Expr SEMICOLON
Rule 97    Normal_Stm -> SEMICOLON
Rule 98    Arg -> Expr
Rule 99    Arg -> empty
Rule 100   Case_Stms -> CASE Value COLON Stm_List Case_Stms
Rule 101   Case_Stms -> DEFAULT COLON Stm_List
Rule 102   Case_Stms -> empty
Rule 103   Block -> L_CURLY Stm_List R_CURLY
Rule 104   Stm_List -> Stm Stm_List
Rule 105   Stm_List -> empty
Rule 106   Expr -> Expr COMMA Op_Assign
Rule 107   Expr -> Op_Assign
Rule 108   Op_Assign -> Op_If ASSIGN Op_Assign
Rule 109   Op_Assign -> Op_If APLUS Op_Assign
Rule 110   Op_Assign -> Op_If AMINUS Op_Assign
Rule 111   Op_Assign -> Op_If AMULTIPLY Op_Assign
Rule 112   Op_Assign -> Op_If ADIVIDE Op_Assign
Rule 113   Op_Assign -> Op_If AXOR Op_Assign
Rule 114   Op_Assign -> Op_If AAND Op_Assign
Rule 115   Op_Assign -> Op_If AOR Op_Assign
Rule 116   Op_Assign -> Op_If ASHIFT_R Op_Assign
Rule 117   Op_Assign -> Op_If ASHIFT_L Op_Assign
Rule 118   Op_Assign -> Op_If
Rule 119   Op_If -> Op_Or QUESTION Op_If COLON Op_If
Rule 120   Op_If -> Op_Or
Rule 121   Op_Or -> Op_Or OR Op_And
Rule 122   Op_Or -> Op_And
Rule 123   Op_And -> Op_And AND Op_BinOR
Rule 124   Op_And -> Op_BinOR
Rule 125   Op_BinOR -> Op_BinOR OR_B Op_BinXOR
Rule 126   Op_BinOR -> Op_BinXOR
Rule 127   Op_BinXOR -> Op_BinXOR XOR_B Op_BinAND
Rule 128   Op_BinXOR -> Op_BinAND
Rule 129   Op_BinAND -> Op_BinAND AND_B Op_Equate
Rule 130   Op_BinAND -> Op_Equate
Rule 131   Op_Equate -> Op_Equate EQUAL Op_Compare
Rule 132   Op_Equate -> Op_Equate NOT_EQUAL Op_Compare
Rule 133   Op_Equate -> Op_Compare
Rule 134   Op_Compare -> Op_Compare LESS Op_Shift
Rule 135   Op_Compare -> Op_Compare GREATER Op_Shift
Rule 136   Op_Compare -> Op_Compare LESS_EQUAL Op_Shift
Rule 137   Op_Compare -> Op_Compare GREATER_EQUAL Op_Shift
Rule 138   Op_Compare -> Op_Shift
Rule 139   Op_Shift -> Op_Shift SHIFT_L Op_Add
Rule 140   Op_Shift -> Op_Shift SHIFT_R Op_Add
Rule 141   Op_Shift -> Op_Add
Rule 142   Op_Add -> Op_Add PLUS Op_Mult
Rule 143   Op_Add -> Op_Add MINUS Op_Mult
Rule 144   Op_Add -> Op_Mult
Rule 145   Op_Mult -> Op_Mult MULTIPLY Op_Unary
Rule 146   Op_Mult -> Op_Mult DIVIDE Op_Unary
Rule 147   Op_Mult -> Op_Mult REMAINDER Op_Unary
Rule 148   Op_Mult -> Op_Unary
Rule 149   Op_Unary -> NOT Op_Unary
Rule 150   Op_Unary -> NOT_B Op_Unary
Rule 151   Op_Unary -> UMINUS Op_Unary
Rule 152   Op_Unary -> MULTIPLY Op_Unary
Rule 153   Op_Unary -> AND_B Op_Unary
Rule 154   Op_Unary -> PLUSPLUS Op_Unary
Rule 155   Op_Unary -> MINUSMINUS Op_Unary
Rule 156   Op_Unary -> Op_Pointer PLUSPLUS
Rule 157   Op_Unary -> Op_Pointer MINUSMINUS
Rule 158   Op_Unary -> L_PAR Type R_PAR Op_Unary
Rule 159   Op_Unary -> SIZEOF L_PAR Type R_PAR
Rule 160   Op_Unary -> SIZEOF L_PAR NAME Pointers R_PAR
Rule 161   Op_Unary -> Op_Pointer
Rule 162   Op_Pointer -> Op_Pointer DOT Value
Rule 163   Op_Pointer -> Op_Pointer ACCESS Value
Rule 164   Op_Pointer -> Op_Pointer L_BRACKET Expr R_BRACKET
Rule 165   Op_Pointer -> Value
Rule 166   Value -> INTEGER
Rule 167   Value -> STRING
Rule 168   Value -> CHARACTER
Rule 169   Value -> DECIMAL
Rule 170   Value -> NAME
Rule 171   Value -> NAME L_PAR Expr R_PAR
Rule 172   Value -> NAME L_PAR R_PAR
Rule 173   Value -> L_PAR Expr R_PAR
Rule 174   empty -> <empty>

Terminals, with rules where they appear

AAND                 : 114
ACCESS               : 163
ADIVIDE              : 112
AMINUS               : 110
AMULTIPLY            : 111
AND                  : 123
AND_B                : 76 129 153
AOR                  : 115
APLUS                : 109
AREMAINDER           : 
ASHIFT_L             : 117
ASHIFT_R             : 116
ASSIGN               : 35 52 108
AUTO                 : 45
AXOR                 : 113
BREAK                : 94
CASE                 : 100
CHAR                 : 63
CHARACTER            : 168
COLON                : 79 100 101 119
COMMA                : 16 20 22 39 49 71 75 106
COMMENT              : 
COMMENT_MULTI        : 
CONST                : 18 47
CONTINUE             : 95
DECIMAL              : 169
DEFAULT              : 101
DIVIDE               : 146
DO                   : 89
DOT                  : 162
DOUBLE               : 66
ELSE                 : 80 85
ENUM                 : 48 59
EQUAL                : 131
EXTERN               : 42
FLOAT                : 65
FOR                  : 83 87
GOTO                 : 93
GREATER              : 135
GREATER_EQUAL        : 137
IF                   : 80 81 85
INT                  : 64
INTEGER              : 52 166
LESS                 : 134
LESS_EQUAL           : 136
L_BRACKET            : 36 37 164
L_CURLY              : 27 28 48 56 58 90 103
L_PAR                : 10 11 12 13 14 15 70 75 80 81 82 83 85 86 87 89 90 158 159 160 171 172 173
MINUS                : 143
MINUSMINUS           : 155 157
MULTIPLY             : 68 145 152
NAME                 : 18 19 22 23 24 25 26 27 28 34 35 48 51 52 55 57 59 76 77 79 93 160 170 171 172
NOT                  : 149
NOT_B                : 150
NOT_EQUAL            : 132
OR                   : 121
OR_B                 : 125
PLUS                 : 142
PLUSPLUS             : 154 156
PRINTF               : 70
QUESTION             : 119
QUOTE_1              : 
QUOTE_2              : 
REGISTER             : 44
REMAINDER            : 147
RETURN               : 96
R_BRACKET            : 36 37 164
R_CURLY              : 27 28 48 56 58 90 103
R_PAR                : 10 11 12 13 14 15 70 75 80 81 82 83 85 86 87 89 90 158 159 160 171 172 173
SCANF                : 75
SEMICOLON            : 10 11 12 26 27 28 31 32 33 48 70 75 83 83 87 87 92 93 94 95 96 97
SHIFT_L              : 139
SHIFT_R              : 140
SIGNED               : 60
SIZEOF               : 159 160
STATIC               : 43
STRING               : 70 75 167
STRUCT               : 27 55 56
SWITCH               : 90
TYPEDEF              : 26
UMINUS               : 151
UNION                : 28 57 58
UNSIGNED             : 61
VOID                 : 67
VOLATILE             : 46
WHILE                : 82 86 89
XOR_B                : 127
error                : 

Nonterminals, with rules where they appear

Arg                  : 83 83 83 87 87 87
Array                : 34 35
Base                 : 53
Block                : 13 14 15 91
Case_Stms            : 90 100
Decl                 : 1
Decls                : 1 0
Enum_Decl            : 7
Enum_Def             : 48 49
Enum_Val             : 49 50
Expr                 : 36 80 81 82 85 86 89 90 92 96 98 106 164 171 173
Func_Decl            : 3
Func_ID              : 10 11 12 13 14 15
Func_Proto           : 4
Id_List              : 14 22
Mod                  : 31 33
Normal_Stm           : 84 88
Op_Add               : 139 140 141 142 143
Op_And               : 121 122 123
Op_Assign            : 106 107 108 109 110 111 112 113 114 115 116 117
Op_BinAND            : 127 128 129
Op_BinOR             : 123 124 125
Op_BinXOR            : 125 126 127
Op_Compare           : 131 132 133 134 135 136 137
Op_Equate            : 129 130 131 132
Op_If                : 35 108 109 110 111 112 113 114 115 116 117 118 119 119
Op_Mult              : 142 143 144 145 146 147
Op_Or                : 119 120 121
Op_Pointer           : 156 157 161 162 163 164
Op_Shift             : 134 135 136 137 138 139 140
Op_Unary             : 145 146 147 148 149 150 151 152 153 154 155 158
Param                : 16 17
Params               : 11 13 16
Pointers             : 41 53 68 160
Printf_Param         : 71 72
Printf_Params        : 70 71
Scalar               : 54
Scanf_Param          : 75
Sign                 : 54
Stm                  : 80 81 82 83 89 104
Stm_List             : 100 101 103 104
Struct_Decl          : 5
Struct_Def           : 14 27 28 29 56 58
Then_Stm             : 80 85 85 86 87
Type                 : 18 19 20 21 24 26 31 32 158 159
Typedef_Decl         : 9
Types                : 10 20
Union_Decl           : 6
Value                : 74 100 162 163 165
Var                  : 31 32 33 41
Var_Decl             : 8 29 30 78
Var_Item             : 39
Var_List             : 31 32 33 39
empty                : 2 38 40 62 69 73 99 102 105

Parsing method: LALR

state 0

    (0) S' -> . Decls
    (1) Decls -> . Decl Decls
    (2) Decls -> . empty
    (3) Decl -> . Func_Decl
    (4) Decl -> . Func_Proto
    (5) Decl -> . Struct_Decl
    (6) Decl -> . Union_Decl
    (7) Decl -> . Enum_Decl
    (8) Decl -> . Var_Decl
    (9) Decl -> . Typedef_Decl
    (174) empty -> .
    (13) Func_Decl -> . Func_ID L_PAR Params R_PAR Block
    (14) Func_Decl -> . Func_ID L_PAR Id_List R_PAR Struct_Def Block
    (15) Func_Decl -> . Func_ID L_PAR R_PAR Block
    (10) Func_Proto -> . Func_ID L_PAR Types R_PAR SEMICOLON
    (11) Func_Proto -> . Func_ID L_PAR Params R_PAR SEMICOLON
    (12) Func_Proto -> . Func_ID L_PAR R_PAR SEMICOLON
    (27) Struct_Decl -> . STRUCT NAME L_CURLY Struct_Def R_CURLY SEMICOLON
    (28) Union_Decl -> . UNION NAME L_CURLY Struct_Def R_CURLY SEMICOLON
    (48) Enum_Decl -> . ENUM NAME L_CURLY Enum_Def R_CURLY SEMICOLON
    (31) Var_Decl -> . Mod Type Var Var_List SEMICOLON
    (32) Var_Decl -> . Type Var Var_List SEMICOLON
    (33) Var_Decl -> . Mod Var Var_List SEMICOLON
    (26) Typedef_Decl -> . TYPEDEF Type NAME SEMICOLON
    (24) Func_ID -> . Type NAME
    (25) Func_ID -> . NAME
    (42) Mod -> . EXTERN
    (43) Mod -> . STATIC
    (44) Mod -> . REGISTER
    (45) Mod -> . AUTO
    (46) Mod -> . VOLATILE
    (47) Mod -> . CONST
    (53) Type -> . Base Pointers
    (54) Base -> . Sign Scalar
    (55) Base -> . STRUCT NAME
    (56) Base -> . STRUCT L_CURLY Struct_Def R_CURLY
    (57) Base -> . UNION NAME
    (58) Base -> . UNION L_CURLY Struct_Def R_CURLY
    (59) Base -> . ENUM NAME
    (60) Sign -> . SIGNED
    (61) Sign -> . UNSIGNED
    (62) Sign -> . empty

    $end            reduce using rule 174 (empty -> .)
    CHAR            reduce using rule 174 (empty -> .)
    INT             reduce using rule 174 (empty -> .)
    FLOAT           reduce using rule 174 (empty -> .)
    DOUBLE          reduce using rule 174 (empty -> .)
    VOID            reduce using rule 174 (empty -> .)
    STRUCT          shift and go to state 12
    UNION           shift and go to state 14
    ENUM            shift and go to state 15
    TYPEDEF         shift and go to state 18
    NAME            shift and go to state 13
    EXTERN          shift and go to state 19
    STATIC          shift and go to state 20
    REGISTER        shift and go to state 21
    AUTO            shift and go to state 22
    VOLATILE        shift and go to state 23
    CONST           shift and go to state 24
    SIGNED          shift and go to state 27
    UNSIGNED        shift and go to state 28

    Decls                          shift and go to state 1
    Decl                           shift and go to state 2
    empty                          shift and go to state 3
    Func_Decl                      shift and go to state 4
    Func_Proto                     shift and go to state 5
    Struct_Decl                    shift and go to state 6
    Union_Decl                     shift and go to state 7
    Enum_Decl                      shift and go to state 8
    Var_Decl                       shift and go to state 9
    Typedef_Decl                   shift and go to state 10
    Func_ID                        shift and go to state 11
    Mod                            shift and go to state 16
    Type                           shift and go to state 17
    Base                           shift and go to state 25
    Sign                           shift and go to state 26

state 1

    (0) S' -> Decls .



state 2

    (1) Decls -> Decl . Decls
    (1) Decls -> . Decl Decls
    (2) Decls -> . empty
    (3) Decl -> . Func_Decl
    (4) Decl -> . Func_Proto
    (5) Decl -> . Struct_Decl
    (6) Decl -> . Union_Decl
    (7) Decl -> . Enum_Decl
    (8) Decl -> . Var_Decl
    (9) Decl -> . Typedef_Decl
    (174) empty -> .
    (13) Func_Decl -> . Func_ID L_PAR Params R_PAR Block
    (14) Func_Decl -> . Func_ID L_PAR Id_List R_PAR Struct_Def Block
    (15) Func_Decl -> . Func_ID L_PAR R_PAR Block
    (10) Func_Proto -> . Func_ID L_PAR Types R_PAR SEMICOLON
    (11) Func_Proto -> . Func_ID L_PAR Params R_PAR SEMICOLON
    (12) Func_Proto -> . Func_ID L_PAR R_PAR SEMICOLON
    (27) Struct_Decl -> . STRUCT NAME L_CURLY Struct_Def R_CURLY SEMICOLON
    (28) Union_Decl -> . UNION NAME L_CURLY Struct_Def R_CURLY SEMICOLON
    (48) Enum_Decl -> . ENUM NAME L_CURLY Enum_Def R_CURLY SEMICOLON
    (31) Var_Decl -> . Mod Type Var Var_List SEMICOLON
    (32) Var_Decl -> . Type Var Var_List SEMICOLON
    (33) Var_Decl -> . Mod Var Var_List SEMICOLON
    (26) Typedef_Decl -> . TYPEDEF Type NAME SEMICOLON
    (24) Func_ID -> . Type NAME
    (25) Func_ID -> . NAME
    (42) Mod -> . EXTERN
    (43) Mod -> . STATIC
    (44) Mod -> . REGISTER
    (45) Mod -> . AUTO
    (46) Mod -> . VOLATILE
    (47) Mod -> . CONST
    (53) Type -> . Base Pointers
    (54) Base -> . Sign Scalar
    (55) Base -> . STRUCT NAME
    (56) Base -> . STRUCT L_CURLY Struct_Def R_CURLY
    (57) Base -> . UNION NAME
    (58) Base -> . UNION L_CURLY Struct_Def R_CURLY
    (59) Base -> . ENUM NAME
    (60) Sign -> . SIGNED
    (61) Sign -> . UNSIGNED
    (62) Sign -> . empty

    $end            reduce using rule 174 (empty -> .)
    CHAR            reduce using rule 174 (empty -> .)
    INT             reduce using rule 174 (empty -> .)
    FLOAT           reduce using rule 174 (empty -> .)
    DOUBLE          reduce using rule 174 (empty -> .)
    VOID            reduce using rule 174 (empty -> .)
    STRUCT          shift and go to state 12
    UNION           shift and go to state 14
    ENUM            shift and go to state 15
    TYPEDEF         shift and go to state 18
    NAME            shift and go to state 13
    EXTERN          shift and go to state 19
    STATIC          shift and go to state 20
    REGISTER        shift and go to state 21
    AUTO            shift and go to state 22
    VOLATILE        shift and go to state 23
    CONST           shift and go to state 24
    SIGNED          shift and go to state 27
    UNSIGNED        shift and go to state 28

    Decl                           shift and go to state 2
    Decls                          shift and go to state 29
    empty                          shift and go to state 3
    Func_Decl                      shift and go to state 4
    Func_Proto                     shift and go to state 5
    Struct_Decl                    shift and go to state 6
    Union_Decl                     shift and go to state 7
    Enum_Decl                      shift and go to state 8
    Var_Decl                       shift and go to state 9
    Typedef_Decl                   shift and go to state 10
    Func_ID                        shift and go to state 11
    Mod                            shift and go to state 16
    Type                           shift and go to state 17
    Base                           shift and go to state 25
    Sign                           shift and go to state 26

state 3

    (2) Decls -> empty .
    (62) Sign -> empty .

    $end            reduce using rule 2 (Decls -> empty .)
    CHAR            reduce using rule 62 (Sign -> empty .)
    INT             reduce using rule 62 (Sign -> empty .)
    FLOAT           reduce using rule 62 (Sign -> empty .)
    DOUBLE          reduce using rule 62 (Sign -> empty .)
    VOID            reduce using rule 62 (Sign -> empty .)


state 4

    (3) Decl -> Func_Decl .

    STRUCT          reduce using rule 3 (Decl -> Func_Decl .)
    UNION           reduce using rule 3 (Decl -> Func_Decl .)
    ENUM            reduce using rule 3 (Decl -> Func_Decl .)
    TYPEDEF         reduce using rule 3 (Decl -> Func_Decl .)
    NAME            reduce using rule 3 (Decl -> Func_Decl .)
    EXTERN          reduce using rule 3 (Decl -> Func_Decl .)
    STATIC          reduce using rule 3 (Decl -> Func_Decl .)
    REGISTER        reduce using rule 3 (Decl -> Func_Decl .)
    AUTO            reduce using rule 3 (Decl -> Func_Decl .)
    VOLATILE        reduce using rule 3 (Decl -> Func_Decl .)
    CONST           reduce using rule 3 (Decl -> Func_Decl .)
    SIGNED          reduce using rule 3 (Decl -> Func_Decl .)
    UNSIGNED        reduce using rule 3 (Decl -> Func_Decl .)
    CHAR            reduce using rule 3 (Decl -> Func_Decl .)
    INT             reduce using rule 3 (Decl -> Func_Decl .)
    FLOAT           reduce using rule 3 (Decl -> Func_Decl .)
    DOUBLE          reduce using rule 3 (Decl -> Func_Decl .)
    VOID            reduce using rule 3 (Decl -> Func_Decl .)
    $end            reduce using rule 3 (Decl -> Func_Decl .)


state 5

    (4) Decl -> Func_Proto .

    STRUCT          reduce using rule 4 (Decl -> Func_Proto .)
    UNION           reduce using rule 4 (Decl -> Func_Proto .)
    ENUM            reduce using rule 4 (Decl -> Func_Proto .)
    TYPEDEF         reduce using rule 4 (Decl -> Func_Proto .)
    NAME            reduce using rule 4 (Decl -> Func_Proto .)
    EXTERN          reduce using rule 4 (Decl -> Func_Proto .)
    STATIC          reduce using rule 4 (Decl -> Func_Proto .)
    REGISTER        reduce using rule 4 (Decl -> Func_Proto .)
    AUTO            reduce using rule 4 (Decl -> Func_Proto .)
    VOLATILE        reduce using rule 4 (Decl -> Func_Proto .)
    CONST           reduce using rule 4 (Decl -> Func_Proto .)
    SIGNED          reduce using rule 4 (Decl -> Func_Proto .)
    UNSIGNED        reduce using rule 4 (Decl -> Func_Proto .)
    CHAR            reduce using rule 4 (Decl -> Func_Proto .)
    INT             reduce using rule 4 (Decl -> Func_Proto .)
    FLOAT           reduce using rule 4 (Decl -> Func_Proto .)
    DOUBLE          reduce using rule 4 (Decl -> Func_Proto .)
    VOID            reduce using rule 4 (Decl -> Func_Proto .)
    $end            reduce using rule 4 (Decl -> Func_Proto .)


state 6

    (5) Decl -> Struct_Decl .

    STRUCT          reduce using rule 5 (Decl -> Struct_Decl .)
    UNION           reduce using rule 5 (Decl -> Struct_Decl .)
    ENUM            reduce using rule 5 (Decl -> Struct_Decl .)
    TYPEDEF         reduce using rule 5 (Decl -> Struct_Decl .)
    NAME            reduce using rule 5 (Decl -> Struct_Decl .)
    EXTERN          reduce using rule 5 (Decl -> Struct_Decl .)
    STATIC          reduce using rule 5 (Decl -> Struct_Decl .)
    REGISTER        reduce using rule 5 (Decl -> Struct_Decl .)
    AUTO            reduce using rule 5 (Decl -> Struct_Decl .)
    VOLATILE        reduce using rule 5 (Decl -> Struct_Decl .)
    CONST           reduce using rule 5 (Decl -> Struct_Decl .)
    SIGNED          reduce using rule 5 (Decl -> Struct_Decl .)
    UNSIGNED        reduce using rule 5 (Decl -> Struct_Decl .)
    CHAR            reduce using rule 5 (Decl -> Struct_Decl .)
    INT             reduce using rule 5 (Decl -> Struct_Decl .)
    FLOAT           reduce using rule 5 (Decl -> Struct_Decl .)
    DOUBLE          reduce using rule 5 (Decl -> Struct_Decl .)
    VOID            reduce using rule 5 (Decl -> Struct_Decl .)
    $end            reduce using rule 5 (Decl -> Struct_Decl .)


state 7

    (6) Decl -> Union_Decl .

    STRUCT          reduce using rule 6 (Decl -> Union_Decl .)
    UNION           reduce using rule 6 (Decl -> Union_Decl .)
    ENUM            reduce using rule 6 (Decl -> Union_Decl .)
    TYPEDEF         reduce using rule 6 (Decl -> Union_Decl .)
    NAME            reduce using rule 6 (Decl -> Union_Decl .)
    EXTERN          reduce using rule 6 (Decl -> Union_Decl .)
    STATIC          reduce using rule 6 (Decl -> Union_Decl .)
    REGISTER        reduce using rule 6 (Decl -> Union_Decl .)
    AUTO            reduce using rule 6 (Decl -> Union_Decl .)
    VOLATILE        reduce using rule 6 (Decl -> Union_Decl .)
    CONST           reduce using rule 6 (Decl -> Union_Decl .)
    SIGNED          reduce using rule 6 (Decl -> Union_Decl .)
    UNSIGNED        reduce using rule 6 (Decl -> Union_Decl .)
    CHAR            reduce using rule 6 (Decl -> Union_Decl .)
    INT             reduce using rule 6 (Decl -> Union_Decl .)
    FLOAT           reduce using rule 6 (Decl -> Union_Decl .)
    DOUBLE          reduce using rule 6 (Decl -> Union_Decl .)
    VOID            reduce using rule 6 (Decl -> Union_Decl .)
    $end            reduce using rule 6 (Decl -> Union_Decl .)


state 8

    (7) Decl -> Enum_Decl .

    STRUCT          reduce using rule 7 (Decl -> Enum_Decl .)
    UNION           reduce using rule 7 (Decl -> Enum_Decl .)
    ENUM            reduce using rule 7 (Decl -> Enum_Decl .)
    TYPEDEF         reduce using rule 7 (Decl -> Enum_Decl .)
    NAME            reduce using rule 7 (Decl -> Enum_Decl .)
    EXTERN          reduce using rule 7 (Decl -> Enum_Decl .)
    STATIC          reduce using rule 7 (Decl -> Enum_Decl .)
    REGISTER        reduce using rule 7 (Decl -> Enum_Decl .)
    AUTO            reduce using rule 7 (Decl -> Enum_Decl .)
    VOLATILE        reduce using rule 7 (Decl -> Enum_Decl .)
    CONST           reduce using rule 7 (Decl -> Enum_Decl .)
    SIGNED          reduce using rule 7 (Decl -> Enum_Decl .)
    UNSIGNED        reduce using rule 7 (Decl -> Enum_Decl .)
    CHAR            reduce using rule 7 (Decl -> Enum_Decl .)
    INT             reduce using rule 7 (Decl -> Enum_Decl .)
    FLOAT           reduce using rule 7 (Decl -> Enum_Decl .)
    DOUBLE          reduce using rule 7 (Decl -> Enum_Decl .)
    VOID            reduce using rule 7 (Decl -> Enum_Decl .)
    $end            reduce using rule 7 (Decl -> Enum_Decl .)


state 9

    (8) Decl -> Var_Decl .

    STRUCT          reduce using rule 8 (Decl -> Var_Decl .)
    UNION           reduce using rule 8 (Decl -> Var_Decl .)
    ENUM            reduce using rule 8 (Decl -> Var_Decl .)
    TYPEDEF         reduce using rule 8 (Decl -> Var_Decl .)
    NAME            reduce using rule 8 (Decl -> Var_Decl .)
    EXTERN          reduce using rule 8 (Decl -> Var_Decl .)
    STATIC          reduce using rule 8 (Decl -> Var_Decl .)
    REGISTER        reduce using rule 8 (Decl -> Var_Decl .)
    AUTO            reduce using rule 8 (Decl -> Var_Decl .)
    VOLATILE        reduce using rule 8 (Decl -> Var_Decl .)
    CONST           reduce using rule 8 (Decl -> Var_Decl .)
    SIGNED          reduce using rule 8 (Decl -> Var_Decl .)
    UNSIGNED        reduce using rule 8 (Decl -> Var_Decl .)
    CHAR            reduce using rule 8 (Decl -> Var_Decl .)
    INT             reduce using rule 8 (Decl -> Var_Decl .)
    FLOAT           reduce using rule 8 (Decl -> Var_Decl .)
    DOUBLE          reduce using rule 8 (Decl -> Var_Decl .)
    VOID            reduce using rule 8 (Decl -> Var_Decl .)
    $end            reduce using rule 8 (Decl -> Var_Decl .)


state 10

    (9) Decl -> Typedef_Decl .

    STRUCT          reduce using rule 9 (Decl -> Typedef_Decl .)
    UNION           reduce using rule 9 (Decl -> Typedef_Decl .)
    ENUM            reduce using rule 9 (Decl -> Typedef_Decl .)
    TYPEDEF         reduce using rule 9 (Decl -> Typedef_Decl .)
    NAME            reduce using rule 9 (Decl -> Typedef_Decl .)
    EXTERN          reduce using rule 9 (Decl -> Typedef_Decl .)
    STATIC          reduce using rule 9 (Decl -> Typedef_Decl .)
    REGISTER        reduce using rule 9 (Decl -> Typedef_Decl .)
    AUTO            reduce using rule 9 (Decl -> Typedef_Decl .)
    VOLATILE        reduce using rule 9 (Decl -> Typedef_Decl .)
    CONST           reduce using rule 9 (Decl -> Typedef_Decl .)
    SIGNED          reduce using rule 9 (Decl -> Typedef_Decl .)
    UNSIGNED        reduce using rule 9 (Decl -> Typedef_Decl .)
    CHAR            reduce using rule 9 (Decl -> Typedef_Decl .)
    INT             reduce using rule 9 (Decl -> Typedef_Decl .)
    FLOAT           reduce using rule 9 (Decl -> Typedef_Decl .)
    DOUBLE          reduce using rule 9 (Decl -> Typedef_Decl .)
    VOID            reduce using rule 9 (Decl -> Typedef_Decl .)
    $end            reduce using rule 9 (Decl -> Typedef_Decl .)


state 11

    (13) Func_Decl -> Func_ID . L_PAR Params R_PAR Block
    (14) Func_Decl -> Func_ID . L_PAR Id_List R_PAR Struct_Def Block
    (15) Func_Decl -> Func_ID . L_PAR R_PAR Block
    (10) Func_Proto -> Func_ID . L_PAR Types R_PAR SEMICOLON
    (11) Func_Proto -> Func_ID . L_PAR Params R_PAR SEMICOLON
    (12) Func_Proto -> Func_ID . L_PAR R_PAR SEMICOLON

    L_PAR           shift and go to state 30


state 12

    (27) Struct_Decl -> STRUCT . NAME L_CURLY Struct_Def R_CURLY SEMICOLON
    (55) Base -> STRUCT . NAME
    (56) Base -> STRUCT . L_CURLY Struct_Def R_CURLY
